修改项目名  改为手写项目

--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 <groupId>com.showtime</groupId>
-<artifactId>handwriting-spring</artifactId>
+<artifactId>handwriting</artifactId>
 <version>0.1.1-SNAPSHOT</version>
 <modelVersion>4.0.0</modelVersion>
 <packaging>war</packaging>
@@ -9,11 +9,11 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 </properties>
-<name>handwriting-spring</name>
+<name>handwriting</name>
 <description>
-    handwriting-spring
+    handwriting
 </description>
-<url>https://github.com/show4268time/handwriting-spring</url>
+<url>https://github.com/show4268time/handwriting</url>
 <developers>
     <developer>
         <id>show4268ime</id>
